# siglip4cc

./: pyproject.toml
src/siglip4cc/: data_loader.py  model_arrange.py  modeling_siglip.py  raw_image_util.py  until_config.py  until_module.py
src/siglip4cc/siglip/: module_siglip.py
